--- a/dev/home.html
+++ b/dev/home.html
@@ -1202,7 +1202,7 @@
 	<!-- partial -->
 	
 	<script>
-	$(function(){ 
+	$( document ).ready(function() {
 		
 		// ------------------------------------------------------------------------
 		// Proof-points/rankings carousels in FAQ section - jQuery plugin in home.js
