--- a/prod/home.html
+++ b/prod/home.html
@@ -17,7 +17,7 @@
 
     <link rel="stylesheet" text="text/css" href="css/main.css" />
     
-    <link href="https://fonts.googleapis.com/css?family=Archivo+Narrow:400,700" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Archivo+Narrow:400,700" rel="stylesheet">
     
 </head>
 <!-- partial -->
@@ -1521,7 +1521,7 @@
 	<!-- partial -->
 	
 	<script>
-	$(function(){ 
+	$( document ).ready(function() {
 		
 		// ------------------------------------------------------------------------
 		// Proof-points/rankings carousels in FAQ section - jQuery plugin in home.js
