--- a/prod/inner-wide.html
+++ b/prod/inner-wide.html
@@ -17,7 +17,7 @@
 
     <link rel="stylesheet" text="text/css" href="css/main.css" />
     
-    <link href="https://fonts.googleapis.com/css?family=Archivo+Narrow:400,700" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Archivo+Narrow:400,700" rel="stylesheet">
     
 </head>
 <!-- partial -->
