tweaks and fixes

--- a/dev/index.html
+++ b/dev/index.html
@@ -14,6 +14,9 @@
 <a href="landing.html">Landing Page</a><br>
 <a href="majors-index.html">Majors Page</a><br>
 <a href="majors-school.html">School/College Page</a><br>
-<a href="majors-major.html">Individual Major Page</a>
+<a href="majors-interest.html">Interest Page</a><br>
+<a href="majors-major.html">Individual Major Page</a><br>
+<a href="event-page.html">Event Page</a><br>
+	<a href="wearepurdue.html">We Are Purdue Page</a>
 </body>
 </html>
