--- a/dev/index.html
+++ b/dev/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body style="text-align:center;padding: 50px;">
-<h1>Admissions Redesign 2018 Templates</h1>
+<h1>Admissions Redesign 2018 Templates test5</h1>
 <a href="home.html">Home Page</a><br>
 <a href="inner-sidebar.html">Single Column Page with Sidebar</a><br>
 <a href="inner-wide.html">Alternating Column Sizes Page</a><br>
