--- a/dev/majors-interest.html
+++ b/dev/majors-interest.html
@@ -28,9 +28,9 @@
 						<hr class="spacer small">
 						<!-- majors block -->
 						<ul>
-							<li><a href="#">Anthropology</a></li>
-							<li><a href="#">Athelethic Training </a></li>
-							<li><a href="#">Biochemistry </a></li>
+							<li><a href="https://www.admissions.purdue.edu/purduesforme/index.php">Anthropology</a></li>
+							<li><a href="https://www.admissions.purdue.edu/purduesforme/index.php">Athelethic Training </a></li>
+							<li><a href="https://www.admissions.purdue.edu/purduesforme/index.php">Biochemistry </a></li>
 							<li><a href="#">Biochemistry (Bioligy)</a></li>
 							<li><a href="#">Biochemistry (Chemistry)</a></li>
 							<li><a href="#">Biological Engineering</a></li>
@@ -54,9 +54,9 @@
 					<div class="col-md-12 main-content additional">
 						<!-- colleges block -->
 						<ul class="college-list-group">
-							<li class="college-list-group-item"><a href="#">College of Agriculture</a></li>
-							<li class="college-list-group-item"><a href="#">College of Education</a></li>
-							<li class="college-list-group-item"><a href="#">College of Engineering</a></li>
+							<li class="college-list-group-item"><a href="https://www.admissions.purdue.edu/purduesforme/index.php">College of Agriculture</a></li>
+							<li class="college-list-group-item"><a href="https://www.admissions.purdue.edu/purduesforme/index.php">College of Education</a></li>
+							<li class="college-list-group-item"><a href="https://www.admissions.purdue.edu/purduesforme/index.php">College of Engineering</a></li>
 							<li class="college-list-group-item"><a href="#">Exploratory Studies</a></li>
 							<li class="college-list-group-item"><a href="#">College of Health &amp; Human Sciences</a></li>
 							<li class="college-list-group-item"><a href="#">College of Liberal Arts</a></li>
@@ -80,8 +80,8 @@
 				</div>-->
 				
 				<!-- rank choice -->
-				<hr>
-				<div class="row text-center">
+				<hr class="screen only">
+				<div class="row text-center screen-only">
       				<div class="col-lg-4 col-md-6 main-content">
 						<img src="images/public-university-rank-lt.png" alt=""  />
 						<!-- [system-asset]/images/ProofPoints_2019/vertical/on-dark-background/vertical-public-university-indiana-rank-400.png[/system-asset] -->
