--- a/dev/majors-school.html
+++ b/dev/majors-school.html
@@ -59,11 +59,11 @@
 				<div class="row">
 					<div class="col-lg-12 main-content">
 						<div class="jumbotron cta">
-							<a href="#" class="cta-link purple">CTA LINK ONE &nbsp; <i class="fas fa-pencil-alt"></i></a>
+							<a href="https://www.admissions.purdue.edu/majors/index.php" class="cta-link purple">CTA LINK ONE &nbsp; <i class="fas fa-pencil-alt"></i></a>
 
-							<a href="#" class="cta-link slayterblue">CTA LINK TWO &nbsp; <i class="fas fa-list-ol"></i></a>
+							<a href="https://www.admissions.purdue.edu/majors/index.php" class="cta-link slayterblue">CTA LINK TWO &nbsp; <i class="fas fa-list-ol"></i></a>
 
-							<a href="#" class="cta-link rossadegreen">CTA LINK THREE &nbsp; <i class="fas fa-envelope"></i></a>
+							<a href="https://www.admissions.purdue.edu/majors/index.php" class="cta-link rossadegreen">CTA LINK THREE &nbsp; <i class="fas fa-envelope"></i></a>
 							
 							<!-- <a href="#" class="cta-link purple">CTA LINK three &nbsp; <i class="fas fa-pencil-alt"></i></a>
 
@@ -102,13 +102,13 @@
 						<h3>Liberal Arts Majors</h3>
 						
 						<ul class="college-list-group">
-							<li class="college-list-group-item"><a href="#">Acting</a></li>
-							<li class="college-list-group-item"><a href="#">African American Studies</a></li>
-							<li class="college-list-group-item"><a href="#">American Studies</a></li>
-							<li class="college-list-group-item"><a href="#">Anthropology <i class="fas fa-asterisk"></i></a></li>
-							<li class="college-list-group-item"><a href="#">Art History</a></li>
-							<li class="college-list-group-item"><a href="#">Asian Studies <i class="fas fa-asterisk"></i></a></li>
-							<li class="college-list-group-item"><a href="#">Chinese Studies</a></li>
+							<li class="college-list-group-item"><a href="https://www.admissions.purdue.edu/majors/index.php">Acting</a></li>
+							<li class="college-list-group-item"><a href="https://www.admissions.purdue.edu/majors/index.php">African American Studies</a></li>
+							<li class="college-list-group-item"><a href="https://www.admissions.purdue.edu/majors/index.php">American Studies</a></li>
+							<li class="college-list-group-item"><a href="https://www.admissions.purdue.edu/majors/index.php">Anthropology <i class="fas fa-asterisk"></i></a></li>
+							<li class="college-list-group-item"><a href="https://www.admissions.purdue.edu/purduesforme/index.php">Art History</a></li>
+							<li class="college-list-group-item"><a href="https://www.admissions.purdue.edu/purduesforme/index.php">Asian Studies <i class="fas fa-asterisk"></i></a></li>
+							<li class="college-list-group-item"><a href="https://www.admissions.purdue.edu/purduesforme/index.php">Chinese Studies</a></li>
 							<li class="college-list-group-item"><a href="#">Classical Studies <i class="fas fa-asterisk"></i></a></li>
 							<li class="college-list-group-item"><a href="#">Communication, General (PRE)</a></li>
 							<li class="college-list-group-item"><a href="#">Comparative Literature</a></li>
