--- a/dev/wearepurdue.html
+++ b/dev/wearepurdue.html
@@ -1,7 +1,7 @@
 <!-- partial:partials/_head.html -->
 <!-- partial -->
 
-<body class="dark-bg feature">
+<body class="dark-bg feature wearepurdue">
 	<div style="height: 1px; overflow: hidden" id="form_ebd87572-6bfa-48e0-8472-9da29506353b" >Loading...</div>
 	<div id="page">
 <!-- partial:partials/_header-nonav.html -->
@@ -24,7 +24,7 @@
         <section id="inner-page-content">
 			<div class="container">
 			
-				<div class="row">
+				<div class="row screen-only">
 					<div class="col-lg-8 main-content">
 						<video height="auto" id="video" poster="https://admissions.purdue.edu/wearepurdue/img/videoposter.jpg" src="video/WeArePurdue_preupdate_Apple720.mp4" type="video/mp4" width="100%"> 
 							Sorry! Your browser does not support the HTML5 video tag. 
@@ -148,9 +148,9 @@
 						<p class="lead">Now that we know you're interested, we'll stay in touch. But you don't have to wait for us &mdash; make plans for a <a target="_blank" href="https://admissions.purdue.edu/visit/index.php">campus visit</a> and figure out for yourself whether you want to be a Purdue Boilermaker.</p>
 					</div>
 				</div>
-				<hr class="striped-gold" />
+				<hr class="striped-gold screen-only" />
 
-				<div class="row">
+				<div class="row screen-only">
 					<div class="col-md-12 main-content">
 
 						<div id="quick-facts">
@@ -230,8 +230,8 @@
 						</div>
 					</div>
 					</div>
-				<hr />
-				<div class="row">
+				<hr class="screen-only" />
+				<div class="row screen-only">
 					<div class="col-md-12 main-content text-center">
 						<h2>Get your first look at campus with our virtual tour!</h2><br>
 						<script  data-localizer="ignore" async="async" defer="defer" src="//www.youvisit.com/tour/Embed/js2" type="text/javascript"></script>
