--- a/dev/inner-feature.html
+++ b/dev/inner-feature.html
@@ -66,7 +66,7 @@
 				</div>
 				
 				<hr>
-				<div class="row">
+				<div class="row screen-only">
 					<div class="col-lg-4 main-content text-center hide-md hide-lg">
 						<img src="images/countries-represented-500.png" alt="" />
 					</div>
