--- a/prod/index.html
+++ b/prod/index.html
@@ -17,6 +17,8 @@
 <a href="majors-interest.html">Interest Page</a><br>
 <a href="majors-major.html">Individual Major Page</a><br>
 <a href="event-page.html">Event Page</a><br>
+	<a href="social-media-share.html">Social Media Share Page</a><br>
+	<a href="digitalad.html">digital ad - transfer</a><br>
 	<a href="wearepurdue.html">We Are Purdue Page</a>
 </body>
 </html>
