--- a/prod/wearepurdue.html
+++ b/prod/wearepurdue.html
@@ -10,11 +10,29 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible" />
     <meta content="width=device-width, user-scalable=no" name="viewport" />
     <link href="https://www.purdue.edu/purdue/images/favicon.ico" rel="shortcut icon" />
+	
+	<!-- partial:_twitter-card.html -->
+	<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:site" content="@PurdueAdmission" />
+<meta name="twitter:title" content="Purdue Admissions" />
+<meta name="twitter:description" content="150 Years of Giant Leaps." />
+<meta name="twitter:image" content="https://admissions.purdue.edu/images/twitter-card-2-1ratio.png" />
+	<!-- partial -->
+	<!-- partial:_meta-og.html -->
+	<meta property="og:url" name="og:url" content="https://www.admissions.purdue.edu/" />
+<meta property="og:type" name="og:type" content="website" />
+<meta property="og:title" name="og:title" content="Purdue Admissions" />
+<meta property="og:description" name="og:description" content="150 Years of Giant Leaps." />
+<meta property="og:image" name="og:image" content="https://admissions.purdue.edu/images/fb-og-image.png" />
+<meta property="fb:app_id" name="fb:app_id" content="492762947795038" />
+
+	<!-- partial -->
     
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 	
     <link rel="stylesheet" text="text/css" href="css/main.css" />
+	<link rel="stylesheet" text="text/css" href="css/print.css" media="print" />
     
     <link href="https://fonts.googleapis.com/css?family=Archivo+Narrow:400,700" rel="stylesheet">
 	<!--[if IE]>
@@ -23,7 +41,7 @@
 </head>
 <!-- partial -->
 
-<body class="dark-bg feature">
+<body class="dark-bg feature wearepurdue">
 	<div style="height: 1px; overflow: hidden" id="form_ebd87572-6bfa-48e0-8472-9da29506353b" >Loading...</div>
 	<div id="page">
 <!-- partial:partials/_header-nonav.html -->
@@ -31,14 +49,15 @@
 		<div class="top">
 			<div class="container">
 				<div class="row">
-					<div class="logo col-lg-2 col-md-3 col-sm-12">
+					<div class="logo col-lg-2 col-md-3 col-sm-12 screen-only">
 						<a href="https://www.purdue.edu">
 							<img alt="Purdue University" src="https://www.purdue.edu/purdue/images/logo.png"/>
 						</a>
 					</div>
-					<div class="department col-lg-9 col-md-9 col-sm-9 col-xs-12">
+					<div class="department col-lg-9 col-md-9 col-sm-9 col-xs-12 screen-only">
 						<a href="/index.php">Undergraduate Admissions</a><!--<span class="tagline"><a href="#">Website tagline</a></span>-->
 					</div>
+					<div class="col-lg-12 print-only"><img style="margin-top:30px" alt="print-logo" src="images/print-logo.png"/></div>
 				</div>
 			</div>
 		</div>
@@ -63,7 +82,7 @@
         <section id="inner-page-content">
 			<div class="container">
 			
-				<div class="row">
+				<div class="row screen-only">
 					<div class="col-lg-8 main-content">
 						<video height="auto" id="video" poster="https://admissions.purdue.edu/wearepurdue/img/videoposter.jpg" src="video/WeArePurdue_preupdate_Apple720.mp4" type="video/mp4" width="100%"> 
 							Sorry! Your browser does not support the HTML5 video tag. 
@@ -187,9 +206,9 @@
 						<p class="lead">Now that we know you're interested, we'll stay in touch. But you don't have to wait for us &mdash; make plans for a <a target="_blank" href="https://admissions.purdue.edu/visit/index.php">campus visit</a> and figure out for yourself whether you want to be a Purdue Boilermaker.</p>
 					</div>
 				</div>
-				<hr class="striped-gold" />
+				<hr class="striped-gold screen-only" />
 
-				<div class="row">
+				<div class="row screen-only">
 					<div class="col-md-12 main-content">
 
 						<div id="quick-facts">
@@ -269,8 +288,8 @@
 						</div>
 					</div>
 					</div>
-				<hr />
-				<div class="row">
+				<hr class="screen-only" />
+				<div class="row screen-only">
 					<div class="col-md-12 main-content text-center">
 						<h2>Get your first look at campus with our virtual tour!</h2><br>
 						<script  data-localizer="ignore" async="async" defer="defer" src="//www.youvisit.com/tour/Embed/js2" type="text/javascript"></script>
