fixed home page mobile video - was showing full size version

--- a/prod/home.html
+++ b/prod/home.html
@@ -206,7 +206,7 @@
         	<div class="container-fluid">
         		<div id="video-container" class="row">
         		<!-- set negative top margin via Cascade so is adjustable for different vids since the vids are cut off height wise. Add fallback as the background image to the video tag.  -->
-					<video class="media" data-object-fit="cover" style="margin-top:-15px;background-image:url(images/vid-img.jpg);background-size:cover;background-position: center"  width="100%" height="auto" autoplay muted>
+					<video id="mainVid" class="media" data-object-fit="cover" style="margin-top:-15px;background-image:url(images/vid-img.jpg);background-size:cover;background-position: center"  width="100%" height="auto" autoplay muted>
 					  	<source src="images/Fountain_Run_Video_HHSVideo_nomusic.mp4" type="video/mp4">
 					</video>
         		</div>
