added externally hosted image links

--- a/dev/digitalad.html
+++ b/dev/digitalad.html
@@ -43,15 +43,15 @@
 				<div class="row">
 					<div class="col-md-4 main-content text-center">
 						<hr class="spacer small" />
-						<img class="proof-point" src="https://dev.admissions.purdue.edu/images/ProofPoints_2019/vertical/on-dark-background/vertical-public-university-US-rank-600.png" alt="" />
+						<img class="proof-point" src="https://www.admissions.purdue.edu/images/ProofPoints/on-dark-background/vertical-public-university-US-rank-600.png" alt="" />
 					</div>
 					<div class="col-md-4 main-content text-center hide-md">
 						<hr class="spacer small" />
-						<img class="proof-point" src="https://dev.admissions.purdue.edu/images/ProofPoints_2019/vertical/on-dark-background/vertical-pays-you-back-rank-600.png" alt="" />
+						<img class="proof-point" src="https://www.admissions.purdue.edu/images/ProofPoints/on-dark-background/vertical-best-career-services-nogold-600.png" alt="" />
 					</div>
 					<div class="col-md-4 main-content text-center hide-md">
 						<hr class="spacer small" />
-						<img class="proof-point" src="https://dev.admissions.purdue.edu/images/ProofPoints_2019/vertical/on-dark-background/vertical-housingOptions-rank-600.png" alt="" />
+						<img class="proof-point" src="https://www.admissions.purdue.edu/images/ProofPoints/on-dark-background/vertical-housingOptions-rank-600.png" alt="" />
 					</div>
 				</div>
 			</div>
@@ -72,7 +72,7 @@
 				<div class="row">
 					<div class="col-lg-12 text-center">
 						<hr class="spacer"/>
-						<a href="https://www.admissions.purdue.edu/"><img src="images/150-horizontal.png" alt="" /></a>
+						<a href="https://www.admissions.purdue.edu/"><img src="https://www.admissions.purdue.edu/images/logo-branding/150logo-horizontal-948px.png" alt="" /></a>
 						<hr class="striped-gold"/>
 						<div class="social-links">
 							<a title="Facebook" href="http://www.facebook.com/PurdueAdmissions" target="_blank">
