--- a/dev/inner-feature.html
+++ b/dev/inner-feature.html
@@ -68,13 +68,13 @@
 				<hr>
 				<div class="row screen-only">
 					<div class="col-lg-4 main-content text-center hide-md hide-lg">
-						<img src="images/countries-represented-500.png" alt="" />
+						<img src="https://www.admissions.purdue.edu/images/git-template-img/countries-represented-500.png" alt="" />
 					</div>
 					<div class="col-lg-4 main-content col-md-6 main-content text-center hide-md">
-						<img src="images/innovative-500.png" alt="" />
+						<img src="https://www.admissions.purdue.edu/images/git-template-img/innovative-500.png" alt="" />
 					</div>
 					<div class="col-lg-4 main-content col-md-6 text-center">
-						<img src="images/majors-500.png" alt="" />
+						<img src="https://www.admissions.purdue.edu/images/git-template-img/majors-500.png" alt="" />
 					</div>
 				</div>
 				
