--- a/dev/majors-index.html
+++ b/dev/majors-index.html
@@ -466,14 +466,14 @@
 				<hr>
 				<div class="row text-center screen-only">
       				<div class="col-lg-4 col-md-6 main-content">
-						<img src="images/public-university-rank-lt.png" alt=""  />
+						<img src="https://www.admissions.purdue.edu/images/git-template-img/public-university-rank-lt.png" alt=""  />
 					</div>
        				<div class="col-lg-4 hide-md col-md-6 main-content">
-						<img style="max-width:400px;width: 100%"  src="images/majors-500.png" alt="" />
+						<img style="max-width:400px;width: 100%"  src="https://www.admissions.purdue.edu/images/git-template-img/majors-500.png" alt="" />
 					</div>
       			
       				<div class="col-md-4 hide-lg main-content">
-						<img src="images/countries-represented-500.png" alt="" />
+						<img src="https://www.admissions.purdue.edu/images/git-template-img/countries-represented-500.png" alt="" />
 					</div>
        			</div>
 			</div>
