--- a/prod/inner-feature.html
+++ b/prod/inner-feature.html
@@ -255,9 +255,9 @@
 
 		</div>
 		<div class="col-md-4">
-			<img class="img-fluid" src="../images/career-services-500-ongold.png" alt="" />
+			<img class="img-fluid" src="https://www.admissions.purdue.edu/images/git-template-img/career-services-500-ongold.png" alt="" />
 
-			<img src="../images/Asian-female-student-in-science-lab-10.jpg" alt="" class="img-fluid">
+			<img src="https://www.admissions.purdue.edu/images/git-template-img/Asian-female-student-in-science-lab-10.jpg" alt="" class="img-fluid">
 			
 			<!-- =================================================== -->
 			<!-- Put css in individual page for this video to be     -->
@@ -311,13 +311,13 @@
 				<hr>
 				<div class="row screen-only">
 					<div class="col-lg-4 main-content text-center hide-md hide-lg">
-						<img src="images/countries-represented-500.png" alt="" />
+						<img src="https://www.admissions.purdue.edu/images/git-template-img/countries-represented-500.png" alt="" />
 					</div>
 					<div class="col-lg-4 main-content col-md-6 main-content text-center hide-md">
-						<img src="images/innovative-500.png" alt="" />
+						<img src="https://www.admissions.purdue.edu/images/git-template-img/innovative-500.png" alt="" />
 					</div>
 					<div class="col-lg-4 main-content col-md-6 text-center">
-						<img src="images/majors-500.png" alt="" />
+						<img src="https://www.admissions.purdue.edu/images/git-template-img/majors-500.png" alt="" />
 					</div>
 				</div>
 				
@@ -904,7 +904,7 @@
 				</div>
 			</div>
 			<div class="motto">
-				<img style="margin-top: 20px" alt="150 Years of Giant Leaps. Purdue University." class="horizontal" src="images/footer-logo-horizontal.png"/> <img alt="150 Years of Giant Leaps. Purdue University." class="vertical" src="images/footer-logo-vertical.png"/>
+				<img style="margin-top: 20px" alt="150 Years of Giant Leaps. Purdue University." class="horizontal" src="https://www.admissions.purdue.edu/images/logo-branding/footer-logo-horizontal.png"/> <img alt="150 Years of Giant Leaps. Purdue University." class="vertical" src="https://www.admissions.purdue.edu/images/logo-branding/footer-logo-vertical.png"/>
 				
 				<a title="Facebook" href="http://www.facebook.com/PurdueAdmissions" target="_blank">
 					<i class="fab fa-facebook-f"></i></a> 
