--- a/prod/inner-wide.html
+++ b/prod/inner-wide.html
@@ -363,13 +363,13 @@
 					<!-- partial:partials/_large-img.html -->
 					<picture class="img-fluid">
 		<!-- 1140px -->
-	  <source media="(min-width: 992px)" srcset="images/Students-walking-near-Windsor-14.jpg">
+	  <source media="(min-width: 992px)" srcset="https://www.admissions.purdue.edu/images/git-template-img/Students-walking-near-Windsor-14.jpg">
 		<!-- 992px -->
-	  <source media="(min-width: 768px)" srcset="images/Students-walking-near-Windsor-14-992.jpg">
+	  <source media="(min-width: 768px)" srcset="https://www.admissions.purdue.edu/images/git-template-img/Students-walking-near-Windsor-14-992.jpg">
 	  <!-- 768px -->
-	   <source media="(min-width: 576px)" srcset="images/Students-walking-near-Windsor-14-768.jpg">
+	   <source media="(min-width: 576px)" srcset="https://www.admissions.purdue.edu/images/git-template-img/Students-walking-near-Windsor-14-768.jpg">
 	   <!-- 576px -->
-	  <img src="images/Students-walking-near-Windsor-14-576.jpg" alt="" />
+	  <img src="https://www.admissions.purdue.edu/images/git-template-img/Students-walking-near-Windsor-14-576.jpg" alt="" />
 </picture>
 					<!-- partial -->
 					
@@ -783,7 +783,7 @@
 				</div>
 			</div>
 			<div class="motto">
-				<img style="margin-top: 20px" alt="150 Years of Giant Leaps. Purdue University." class="horizontal" src="images/footer-logo-horizontal.png"/> <img alt="150 Years of Giant Leaps. Purdue University." class="vertical" src="images/footer-logo-vertical.png"/>
+				<img style="margin-top: 20px" alt="150 Years of Giant Leaps. Purdue University." class="horizontal" src="https://www.admissions.purdue.edu/images/logo-branding/footer-logo-horizontal.png"/> <img alt="150 Years of Giant Leaps. Purdue University." class="vertical" src="https://www.admissions.purdue.edu/images/logo-branding/footer-logo-vertical.png"/>
 				
 				<a title="Facebook" href="http://www.facebook.com/PurdueAdmissions" target="_blank">
 					<i class="fab fa-facebook-f"></i></a> 
