--- a/prod/wearepurdue.html
+++ b/prod/wearepurdue.html
@@ -57,7 +57,7 @@
 					<div class="department col-lg-9 col-md-9 col-sm-9 col-xs-12 screen-only">
 						<a href="/index.php">Undergraduate Admissions</a><!--<span class="tagline"><a href="#">Website tagline</a></span>-->
 					</div>
-					<div class="col-lg-12 print-only"><img style="margin-top:30px" alt="print-logo" src="images/print-logo.png"/></div>
+					<div class="col-lg-12 print-only"><img style="margin-top:30px" alt="print-logo" src="https://www.admissions.purdue.edu/images/git-template-img/print-logo.png"/></div>
 				</div>
 			</div>
 		</div>
