--- a/dev/event-page.html
+++ b/dev/event-page.html
@@ -93,7 +93,7 @@
 				
 				<div class="row">
 					<div href="https://www.admissions.purdue.edu" class="col-md-12 main-content">
-						<img src="images/Male-students-creating-sculptures-5.jpg" alt="" class="img-fluid">
+						<img src="https://www.admissions.purdue.edu/images/git-template-img/Male-students-creating-sculptures-5.jpg" alt="" class="img-fluid">
 					</div>
 				</div>
 				
