--- a/prod/majors-index.html
+++ b/prod/majors-index.html
@@ -661,14 +661,14 @@
 				<hr>
 				<div class="row text-center screen-only">
       				<div class="col-lg-4 col-md-6 main-content">
-						<img src="images/public-university-rank-lt.png" alt=""  />
+						<img src="https://www.admissions.purdue.edu/images/git-template-img/public-university-rank-lt.png" alt=""  />
 					</div>
        				<div class="col-lg-4 hide-md col-md-6 main-content">
-						<img style="max-width:400px;width: 100%"  src="images/majors-500.png" alt="" />
+						<img style="max-width:400px;width: 100%"  src="https://www.admissions.purdue.edu/images/git-template-img/majors-500.png" alt="" />
 					</div>
       			
       				<div class="col-md-4 hide-lg main-content">
-						<img src="images/countries-represented-500.png" alt="" />
+						<img src="https://www.admissions.purdue.edu/images/git-template-img/countries-represented-500.png" alt="" />
 					</div>
        			</div>
 			</div>
@@ -821,7 +821,7 @@
 				</div>
 			</div>
 			<div class="motto">
-				<img style="margin-top: 20px" alt="150 Years of Giant Leaps. Purdue University." class="horizontal" src="images/footer-logo-horizontal.png"/> <img alt="150 Years of Giant Leaps. Purdue University." class="vertical" src="images/footer-logo-vertical.png"/>
+				<img style="margin-top: 20px" alt="150 Years of Giant Leaps. Purdue University." class="horizontal" src="https://www.admissions.purdue.edu/images/logo-branding/footer-logo-horizontal.png"/> <img alt="150 Years of Giant Leaps. Purdue University." class="vertical" src="https://www.admissions.purdue.edu/images/logo-branding/footer-logo-vertical.png"/>
 				
 				<a title="Facebook" href="http://www.facebook.com/PurdueAdmissions" target="_blank">
 					<i class="fab fa-facebook-f"></i></a> 
