updating images to use external link

--- a/dev/home.html
+++ b/dev/home.html
@@ -1054,11 +1054,11 @@
 								<h3 class="article-title" style="color:#C28E0E"><i class="fa fa-birthday-cake"></i> helpful information blog article title</h3> Celery quandong swiss chard chicory earthnut pea potato. Salsify taro catsear garlic gram celery bitterleaf wattle seed collard greens nori. Grape wattle seed kombu beetroot horseradish carrot squash brussels sprout chard.... <a class="blog-link" href="#">Read More <i class="icon far fa-arrow-alt-circle-right"></i></a>
 							</div>			
 						</div>
-						<div class="profiles" id="student-profile" style="background-image: url('images/gabby-BW.jpg');" data-hoverImg="https://www.admissions.purdue.edu/images/git-template-img/gabby-color.jpg" data-returnImg="https://www.admissions.purdue.edu/images/git-template-img/gabby-BW.jpg">
+						<div class="profiles" id="student-profile" style="background-image: url('https://www.admissions.purdue.edu/images/git-template-img/gabby-BW.jpg');" data-hoverImg="https://www.admissions.purdue.edu/images/git-template-img/gabby-color.jpg" data-returnImg="https://www.admissions.purdue.edu/images/git-template-img/gabby-BW.jpg">
 							<h4>STUDENT PROFILE: Gabby Merriken</h4>
 							<p>Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. <a href="#">Read More...</a></p>
 						</div>
-						<div class="profiles" id="faculty-profile" style="background-image: url('images/faculty-BW.jpg');" data-hoverImg="https://www.admissions.purdue.edu/images/git-template-img/faculty-color.jpg" data-returnImg="https://www.admissions.purdue.edu/images/git-template-img/faculty-BW.jpg">
+						<div class="profiles" id="faculty-profile" style="background-image: url('https://www.admissions.purdue.edu/images/git-template-img/faculty-BW.jpg');" data-hoverImg="https://www.admissions.purdue.edu/images/git-template-img/faculty-color.jpg" data-returnImg="https://www.admissions.purdue.edu/images/git-template-img/faculty-BW.jpg">
 							<h4>FACULTY PROFILE: Whoever ThisIs</h4>
 							<p>Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. <a href="#">Read More...</a></p>
 						</div>
