--- a/prod/inner-wide.html
+++ b/prod/inner-wide.html
@@ -537,7 +537,7 @@
 						
 						<!-- partial:partials/_figure.html -->
 						<figure class="center"><!-- temp style here for display -->
-	<img style="width: 300px; height: auto;" src="../images/Purdue-Pete.jpg" alt="">
+	<img style="width: 300px; height: auto;" src="https://www.admissions.purdue.edu/images/git-template-img/Purdue-Pete.jpg" alt="">
 	<figcaption>This is an image with a caption.</figcaption>
 </figure>
 						<!-- partial -->
