added accordion and sidebar video option/styles

--- a/prod/inner-sidebar.html
+++ b/prod/inner-sidebar.html
@@ -275,7 +275,10 @@
 	  <p class="notice-alert">Celery quandong swiss chard chicory earthnut pea potato. Salsify taro catsear garlic gram celery bitterleaf wattle seed collard greens nori. Grape wattle seed kombu beetroot horseradish carrot squash brussels sprout chard.</p>
 	  
 	  <p class="success-alert">Celery quandong swiss chard chicory earthnut pea potato. Salsify taro catsear garlic gram celery bitterleaf wattle seed collard greens nori. Grape wattle seed kombu beetroot horseradish carrot squash brussels sprout chard.</p>
-
+			
+		<!-- partial:_accordion-vid.html -->
+						<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/bGIFC8u09O4" width="560"></iframe></p>
+						<!-- partial -->
 
 		</div>
 	</div>
@@ -345,12 +348,17 @@
 	  <a href="#" class="list-group-item">Sub Menu Item</a>
 	  <a href="#" class="list-group-item">Sub Menu Item</a>
 	</div>
-	<div class="sidebar-img-wrapper"><img src="https://www.admissions.purdue.edu/images/git-template-img/Students-taking-picture-with-Neil-Armstrong-statue-1.jpg" alt="" class="img-fluid" /></div>
+	<div class="sidebar-img-wrapper">
+		<!-- partial:_sidebar-vid.html -->
+		<iframe class="side-video" width="350" height="198" src="https://www.youtube.com/embed/bGIFC8u09O4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+		<!-- partial -->
+		<!--<img src="https://www.admissions.purdue.edu/images/git-template-img/Students-taking-picture-with-Neil-Armstrong-statue-1.jpg" alt="" class="img-fluid" />-->
+	</div>
 	<div class="text">
-		<h4>Sidebar Text Header</h4>
+		<h3>Sidebar Text Header</h3>
 		<p>Nori grape silver beet broccoli <a href="#">kombu beet greens</a> fava bean potato quandong celery. Bunya nuts black-eyed pea prairie turnip leek lentil turnip greens parsnip. Sea lettuce lettuce water chestnut eggplant winter purslane fennel azuki bean earthnut pea sierra leone bologi leek soko chicory celtuce parsley jícama salsify.</p>
 
-		<ol>
+		<!--<ol>
 			<li>List itemCelery quandong swiss chard chicory earthnut pea potato. Salsify taro catsear garlic gram celery bitterleaf wattle seed collard greens nori. Grape wattle seed kombu beetroot horseradish carrot squash brussels sprout chard.</li>
 			<li>List item</li>
 			<li>List item</li>
@@ -367,7 +375,7 @@
 		</ul>
 
 		<p>Celery quandong swiss chard chicory earthnut pea potato. Salsify taro catsear garlic gram celery bitterleaf wattle seed collard greens nori. Grape wattle seed kombu beetroot horseradish carrot squash brussels sprout chard.</p>
-		<p>Celery quandong swiss chard chicory earthnut pea potato. Salsify taro catsear garlic gram celery bitterleaf wattle seed collard greens nori. Grape wattle seed kombu beetroot horseradish carrot squash brussels sprout chard.</p>
+		<p>Celery quandong swiss chard chicory earthnut pea potato. Salsify taro catsear garlic gram celery bitterleaf wattle seed collard greens nori. Grape wattle seed kombu beetroot horseradish carrot squash brussels sprout chard.</p>-->
 	</div>
 	<div id="additional-links" class="list-group">
 	  <a href="#" class="list-group-item">Additional Link </a>
@@ -376,6 +384,7 @@
 	  <a href="#" class="list-group-item">Additional Link</a>
 	</div>
 	<img src="https://www.admissions.purdue.edu/images/git-template-img/public-university-rank.png" alt="" class="img-fluid" />
+	
 
 
 </div>
