--- a/prod/inner-feature.html
+++ b/prod/inner-feature.html
@@ -402,7 +402,10 @@
 	  <p class="notice-alert">Celery quandong swiss chard chicory earthnut pea potato. Salsify taro catsear garlic gram celery bitterleaf wattle seed collard greens nori. Grape wattle seed kombu beetroot horseradish carrot squash brussels sprout chard.</p>
 	  
 	  <p class="success-alert">Celery quandong swiss chard chicory earthnut pea potato. Salsify taro catsear garlic gram celery bitterleaf wattle seed collard greens nori. Grape wattle seed kombu beetroot horseradish carrot squash brussels sprout chard.</p>
-
+			
+		<!-- partial:_accordion-vid.html -->
+						<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/bGIFC8u09O4" width="560"></iframe></p>
+						<!-- partial -->
 
 		</div>
 	</div>
