changed style for side vid

--- a/prod/inner-sidebar.html
+++ b/prod/inner-sidebar.html
@@ -350,7 +350,9 @@
 	</div>
 	<div class="sidebar-img-wrapper">
 		<!-- partial:_sidebar-vid.html -->
-		<iframe class="side-video" width="350" height="198" src="https://www.youtube.com/embed/bGIFC8u09O4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+		<div class="sidebar-vid-container">
+	<iframe class="side-video" width="350" height="198" src="https://www.youtube.com/embed/bGIFC8u09O4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+</div>
 		<!-- partial -->
 		<!--<img src="https://www.admissions.purdue.edu/images/git-template-img/Students-taking-picture-with-Neil-Armstrong-statue-1.jpg" alt="" class="img-fluid" />-->
 	</div>
