added style for tabs not selected

--- a/prod/inner-feature.html
+++ b/prod/inner-feature.html
@@ -219,7 +219,7 @@
 						
 						<h1>Header level 6</h1>
 						<!-- partial:partials/_figure.html -->
-						<figure class="center"><!-- temp style here for display -->
+						<figure class="right"><!-- temp style here for display -->
 	<img style="width: 300px; height: auto;" src="https://www.admissions.purdue.edu/images/git-template-img/Purdue-Pete.jpg" alt="">
 	<figcaption>This is an image with a caption.</figcaption>
 </figure>
