--- a/prod/inner-wide.html
+++ b/prod/inner-wide.html
@@ -536,7 +536,7 @@
 						<p>Nori grape silver beet broccoli kombu beet greens fava bean potato quandong celery. Bunya nuts black-eyed pea prairie turnip leek lentil turnip greens parsnip. Sea lettuce lettuce water chestnut eggplant winter purslane fennel azuki bean earthnut pea sierra leone bologi leek soko chicory celtuce parsley jícama salsify.</p>
 						
 						<!-- partial:partials/_figure.html -->
-						<figure class="center"><!-- temp style here for display -->
+						<figure class="right"><!-- temp style here for display -->
 	<img style="width: 300px; height: auto;" src="https://www.admissions.purdue.edu/images/git-template-img/Purdue-Pete.jpg" alt="">
 	<figcaption>This is an image with a caption.</figcaption>
 </figure>
